Update stanford recursive network sentiment analysis data preparation

--- a/natural_language_process/sentiment_analysis/sentiment-analysis_on_movie_review_tensorflow/Sentiment_analysis_RNN_tensorflow.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment-analysis_on_movie_review_tensorflow/Sentiment_analysis_RNN_tensorflow.ipynb
@@ -750,6 +750,8 @@
     "with graph.as_default():\n",
     "    inputs_ = tf.placeholder(tf.int32, [None, None], name = \"inputs\")\n",
     "    labels_ = tf.placeholder(tf.int32, [None, None], name = \"labels\")\n",
+    "    \n",
+    "    # If the shape is not specified, you can feed a tensor of any shape.\n",
     "    keep_prob = tf.placeholder(tf.float32, name = \"keep_prob\")"
    ]
   },
