Update sentiment analysis for RNN, Add naive bayes and text preprocessing

--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -124,6 +124,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can create an new graph by using [tf.Graph](https://www.tensorflow.org/api_docs/python/tf/Graph) and set it as the default graph by using `tf.Graph.as_default` context manager, which overrides the current default graph for the lifetime of the context:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = tf.Graph()\n",
+    "default_g = tf.get_default_graph()\n",
+    "assert g is not default_g\n",
+    "with g.as_default():\n",
+    "  # Define operations and tensors in `g`.\n",
+    "  c = tf.constant(30.0)\n",
+    "  assert c.graph is g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Why TensorFlow defines its own versions of objects such as variables instead of just using a normal Python variable? [One of the TensorFlow tutorials has an explanation](https://www.tensorflow.org/get_started/mnist/pros#deep-mnist-for-experts):\n",
     "> To do efficient numerical computing in Python, we typically use libraries like NumPy that do expensive operations such as matrix multiplication outside Python, using highly efficient code implemented in another language. Unfortunately, there can still be a lot of overhead from switching back to Python every operation. This overhead is especially bad if you want to run computations on GPUs or in a distributed manner, where there can be a high cost to transferring data.\n",
     "\n",
