--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
@@ -403,25 +403,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Using Naive Bayes and SVM "
+   ]
   },
   {
    "cell_type": "code",
