Update sentiment analysis for recursive neural network

--- a/natural_language_process/language_model/text_processing.ipynb
+++ b/natural_language_process/language_model/text_processing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A model represents observations in a form that allows us understand them better and predict new occurences."
+    "# Text Processing"
    ]
   },
   {
@@ -20,84 +20,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Language Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A language model captures the distributional statistics of words. In its most basic form, we take each unique word in a corpus, i, and count how many times it occurs.\n",
-    "\n",
-    "If you have a list/sequence of words, obtaining the counts in Python is as easy as:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({'humpy': 1, 'again': 1, 'dumpty': 1, 'together': 1})\n"
-     ]
-    }
-   ],
-   "source": [
-    "words = ['humpy', 'dumpty','together', 'again']\n",
-    "counts = Counter(words)\n",
-    "print(counts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can then divide the counts by the total number of words, to normalize the values to a [0, 1] range. What this produces is a prior probability distribution over all unique words, P(i) , and that describes some interesting properties of the corpus, for instance which words are frequent and which ones are rare!\n",
-    "\n",
-    "If the corpus is large enough, e.g. the entire text on Wikipedia, then the model tends to represent the distribution of the language itself!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Generating Text\n",
-    "\n",
-    "One thing we could do with such a model is to generate new text! After all, it is a probability distribution. So we can sample it, right?\n",
-    "\n",
-    "Again, Python makes this very straightforward, esp. with the random.choices() function included in Python 3.6 and above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random.choices(list(counts.keys()), weights=list(counts.values()), k=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that here we are using the raw counts - this is okay, as we only need relative weights, not true probabilities."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -108,8 +30,7 @@
     "import sys\n",
     "import string\n",
     "import json\n",
-    "import nltk\n",
-    "\n"
+    "import nltk"
    ]
   },
   {
@@ -743,7 +664,9 @@
     "* [NLTK stop words](https://pythonspot.com/nltk-stop-words/)\n",
     "* [NLTK stemming](https://pythonspot.com/nltk-stemming/)\n",
     "* [NLTK part of speech tagging](https://pythonspot.com/nltk-speech-tagging/)\n",
-    "* [How to Prepare Text Data for Machine Learning with scikit-learn](https://machinelearningmastery.com/prepare-text-data-machine-learning-scikit-learn/)"
+    "* [How to Prepare Text Data for Machine Learning with scikit-learn](https://machinelearningmastery.com/prepare-text-data-machine-learning-scikit-learn/)\n",
+    "* [4.2. Feature extraction](http://scikit-learn.org/stable/modules/feature_extraction.html)\n",
+    "* [Working With Text Data](http://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html)"
    ]
   },
   {
