update on recursive neural network

--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/recursive_neural_network_for_sentiment_analysis_basic.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/recursive_neural_network_for_sentiment_analysis_basic.ipynb
@@ -23,7 +23,7 @@
     "    2. sequence of words\n",
     "\n",
     "\n",
-    "* The third way would be: parse trees\n",
+    "* The third way would be: parse trees (with more structural information)\n",
     "\n",
     "[example]"
    ]
@@ -161,8 +161,7 @@
     "* How to do the conversion?\n",
     "* Arrange the parse tree in a list such that children always come before parents\n",
     "    * We can do this using post-order traversal algorithm\n",
-    "    * While we are traversing the parse tree in post order, we create three arrays/lists:\n",
-    "        * parent array, relation array and word array.\n",
+    "    * While we are traversing the parse tree in post order, we create three arrays/lists: parent array, relation array and word array.\n",
     "        * parent array: index represents nodes' ID, value represents index of parent. If a node has no parent, the value would be -1\n",
     "        * relation array: index represents nodes' ID, value represents index of relation to parent. If a node has no parent, the value would be -1\n",
     "        * word array:  index represents nodes' ID, value represents index of word. If a node has no word, the value would be -1\n",
