--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/recursive_neural_network_for_sentiment_analysis_coding.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/recursive_neural_network_for_sentiment_analysis_coding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,6 @@
     "#             (p, p - learning_rate*g / T.sqrt(c + eps)) for p, c, g in zip(self.params, caches, grads)\n",
     "#         ]\n",
     "        \n",
-    "        \n",
     "        caches = [theano.shared(np.ones_like(p.get_value())) for p in self.params]\n",
     "        new_caches = [c + g*g for c, g in zip(caches, grads)]\n",
     "\n",
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,6 +387,27 @@
     "print(len(train))\n",
     "print(len(test))\n",
     "print(\"preprocess data finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9544\n",
+      "1210\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = train + test[:1000]\n",
+    "test = test[1000:]\n",
+    "print(len(train))\n",
+    "print(len(test))"
    ]
   },
   {
@@ -2202,13 +2222,7 @@
       "test accuracy: 0.725 best test accuracy so far: 0.786\n",
       "i: 38 cost: 682.497590244 xent 234.460630836 correct rate: 0.9959537572254336 time for epoch: 0:10:19.711309\n",
       "n_correct: 724 n_total: 1000\n",
-      "test accuracy: 0.724 best test accuracy so far: 0.786\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "test accuracy: 0.724 best test accuracy so far: 0.786\n",
       "i: 39 cost: 632.740199951 xent 188.281284561 correct rate: 0.9971098265895953 time for epoch: 0:09:57.632883\n",
       "n_correct: 722 n_total: 1000\n",
       "test accuracy: 0.722 best test accuracy so far: 0.786\n",
@@ -2576,13 +2590,7 @@
       "test accuracy: 0.707 best test accuracy so far: 0.766\n",
       "i: 38 cost: 824.126742365 xent 410.502520194 correct rate: 0.9904624277456647 time for epoch: 0:09:29.773958\n",
       "n_correct: 697 n_total: 1000\n",
-      "test accuracy: 0.697 best test accuracy so far: 0.766\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "test accuracy: 0.697 best test accuracy so far: 0.766\n",
       "i: 39 cost: 911.915656284 xent 499.689529554 correct rate: 0.9875722543352601 time for epoch: 0:07:37.157082\n",
       "n_correct: 713 n_total: 1000\n",
       "test accuracy: 0.713 best test accuracy so far: 0.766\n",
@@ -2622,6 +2630,97 @@
    ],
    "source": [
     "main(train, test, word2idx, dim=12, learning_rate=8e-3, reg=1e-2, mu=0, eps=1e-7, activation=T.tanh, epochs=40, train_inner_nodes=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total train size before filtering: 9544\n",
+      "total train size after filtering: 7739\n",
+      "train size: 7739\n",
+      "test size: 1000\n",
+      "vocab size: 18647\n",
+      "learning rate: 0.008\n",
+      "regularization: 0.01\n",
+      "mu: 0\n",
+      "eps: 1e-07\n",
+      "epochs: 35\n",
+      "decay_rate: 0.999\n",
+      "dim: 10\n",
+      "train_inner_nodes:  False\n",
+      "start training...\n",
+      "i: 0 cost: 5606.26045475 xent 5351.58869112 correct rate: 0.5209975449024422 time for epoch: 0:07:11.108013\n",
+      "n_correct: 506 n_total: 1000\n",
+      "test accuracy: 0.506 best test accuracy so far: 0.506\n",
+      "i: 1 cost: 5507.85330666 xent 5338.6001544 correct rate: 0.5446440108541155 time for epoch: 0:06:40.871499\n",
+      "n_correct: 506 n_total: 1000\n",
+      "test accuracy: 0.506 best test accuracy so far: 0.506\n",
+      "i: 2 cost: 5454.61627167 xent 5332.64071182 correct rate: 0.5443855795322393 time for epoch: 0:07:16.801339\n",
+      "n_correct: 519 n_total: 1000\n",
+      "test accuracy: 0.519 best test accuracy so far: 0.519\n",
+      "i: 3 cost: 5421.21869076 xent 5326.07370435 correct rate: 0.550071068613516 time for epoch: 0:07:46.502686\n",
+      "n_correct: 498 n_total: 1000\n",
+      "test accuracy: 0.498 best test accuracy so far: 0.519\n",
+      "i: 4 cost: 5398.63738707 xent 5317.7095747 correct rate: 0.5552396950510402 time for epoch: 0:06:46.414217\n",
+      "n_correct: 509 n_total: 1000\n",
+      "test accuracy: 0.509 best test accuracy so far: 0.519\n",
+      "i: 5 cost: 5383.03049006 xent 5308.50991252 correct rate: 0.5632510660292027 time for epoch: 0:07:56.730642\n",
+      "n_correct: 511 n_total: 1000\n",
+      "test accuracy: 0.511 best test accuracy so far: 0.519\n",
+      "i: 6 cost: 5369.84408631 xent 5296.24853444 correct rate: 0.5677736141620364 time for epoch: 0:08:59.180002\n",
+      "n_correct: 517 n_total: 1000\n",
+      "test accuracy: 0.517 best test accuracy so far: 0.519\n",
+      "i: 7 cost: 5357.85105451 xent 5280.92404257 correct rate: 0.5735883189042512 time for epoch: 0:07:55.623358\n",
+      "n_correct: 512 n_total: 1000\n",
+      "test accuracy: 0.512 best test accuracy so far: 0.519\n",
+      "i: 8 cost: 5344.47922344 xent 5263.14125787 correct rate: 0.5835379247964854 time for epoch: 0:08:44.579199\n",
+      "n_correct: 517 n_total: 1000\n",
+      "test accuracy: 0.517 best test accuracy so far: 0.519\n",
+      "i: 9 cost: 5328.36729654 xent 5236.76538077 correct rate: 0.5898694921824525 time for epoch: 0:07:26.894743\n",
+      "n_correct: 538 n_total: 1000\n",
+      "test accuracy: 0.538 best test accuracy so far: 0.538\n",
+      "i: 10 cost: 5305.90765937 xent 5200.79156013 correct rate: 0.6084765473575398 time for epoch: 0:07:39.301464\n",
+      "n_correct: 532 n_total: 1000\n",
+      "test accuracy: 0.532 best test accuracy so far: 0.538\n",
+      "i: 11 cost: 5271.65728988 xent 5148.9179329 correct rate: 0.6193306628763406 time for epoch: 0:07:18.656440\n",
+      "n_correct: 545 n_total: 1000\n",
+      "test accuracy: 0.545 best test accuracy so far: 0.545\n",
+      "i: 12 cost: 5216.20953701 xent 5067.51545731 correct rate: 0.6406512469311281 time for epoch: 0:07:09.510079\n",
+      "n_correct: 534 n_total: 1000\n",
+      "test accuracy: 0.534 best test accuracy so far: 0.545\n",
+      "i: 13 cost: 5117.62723034 xent 4930.58284207 correct rate: 0.6640392815609252 time for epoch: 0:07:05.220063\n",
+      "n_correct: 552 n_total: 1000\n",
+      "test accuracy: 0.552 best test accuracy so far: 0.552\n",
+      "i: 14 cost: 4926.61586127 xent 4684.64676716 correct rate: 0.7031916268251712 time for epoch: 0:07:18.712282\n",
+      "n_correct: 567 n_total: 1000\n",
+      "test accuracy: 0.567 best test accuracy so far: 0.567\n",
+      "i: 15 cost: 4585.63293725 xent 4269.63977539 correct rate: 0.7455743636128699 time for epoch: 0:06:52.369900\n",
+      "n_correct: 566 n_total: 1000\n",
+      "test accuracy: 0.566 best test accuracy so far: 0.567\n",
+      "i: 16 cost: 4056.52619111 xent 3654.72438701 correct rate: 0.79945729422406 time for epoch: 0:06:30.3447997\n",
+      "n_correct: 569 n_total: 1000\n",
+      "test accuracy: 0.569 best test accuracy so far: 0.569\n",
+      "i: 17 cost: 3471.03623554 xent 2983.68407608 correct rate: 0.8481715983977258 time for epoch: 0:07:04.680362\n",
+      "n_correct: 570 n_total: 1000\n",
+      "test accuracy: 0.57 best test accuracy so far: 0.57\n",
+      "i: 18 cost: 2951.24187645 xent 2395.47294312 correct rate: 0.8820261015635095 time for epoch: 0:07:08.606568\n",
+      "n_correct: 563 n_total: 1000\n",
+      "test accuracy: 0.563 best test accuracy so far: 0.57\n",
+      "i: 19 cost: 2500.04136527 xent 1888.59739441 correct rate: 0.9149760951027265 time for epoch: 0:07:01.581387\n",
+      "n_correct: 553 n_total: 1000\n",
+      "test accuracy: 0.553 best test accuracy so far: 0.57\n",
+      "epoch: 20, j/N: 5985/7739 correct rate so far: 0.727872, cost so far: 1631.763660, xent so far: 1129.711062\r"
+     ]
+    }
+   ],
+   "source": [
+    "main(train, test, word2idx, dim=10, learning_rate=8e-3, reg=1e-2, mu=0, eps=1e-7, activation=T.tanh, epochs=35, train_inner_nodes=False)"
    ]
   },
   {
